# backend_lecture

./: .gitignore  README.md  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2025_02_16_1757-ef0ce29c678f_create_users_and_addresses_tables.py
app/: items.py  main.py  schemas.py
app/api/addresses/: handlers.py  router.py  schemas.py
app/api/users/: handlers.py  router.py  schemas.py
app/db/: database.py  models.py
